--- a/templates/index.html
+++ b/templates/index.html
@@ -251,11 +251,12 @@
 
     <style>
         body{
-             background-image: url("https://raw.githubusercontent.com/Aabhie0/ineugr/main/images/Credit_card.webp");
+             background-image: url("https://raw.githubusercontent.com/Aabhie0/ineugr/main/images/Credit_card.jpeg");
              background-position: center;
              background-repeat: no-repeat;
              background-size: 100% 100%;
              height: 100%;
+       
         }
         
         body{
