--- a/templates/result.html
+++ b/templates/result.html
@@ -49,7 +49,7 @@
 
     <style>
         body{
-             background-image:url("https://raw.githubusercontent.com/Aabhie0/ineugr/main/images/Credit_card.webp");
+             background-image:url("https://raw.githubusercontent.com/Aabhie0/ineugr/main/images/Credit_card.jpeg");
              background-position: center;
              background-repeat: no-repeat;
              background-size: 200%;
