--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
                             <h5 class="card-title">Status</h5>
                             <select name="status" id="status" style="width: fit-content;">
                                 <option value="None">STATUS</option>
-                                <option value=1>`under checking account</option>
+                                <option value=1>Under checking account</option>
                                 <option value=2>... < 0 DM</option>
                                 <option value=3>0<= ... < 200 DM</option>
                                 <option value=4>... >= 200 DM / salary for at least 1 year</option>
@@ -132,10 +132,10 @@
                         <div class="card-body">
                             <h5 class="card-title">Personal Status Gender</h5>
                             <select name="personal_status_sex" id="personal_status_sex" style="width: fit-content;"> 
-                                <option value="None">PERSONAL STATUS SEX</option>
-                                <option value=1>MALE : DIVORCED/SEPARATED</option>
-                                <option value=2>FEMALE : NON-SINGLE OR MALE : SINGLE</option>
-                                <option value=3>MALE : MARRIED/WIDOWED</option>
+                                <option value="None">PERSONAL STATUS Gender</option>
+                                <option value=1>MALE : DIVORCED / SEPARATED</option>
+                                <option value=2>FEMALE : MARRIED / MALE : SINGLE</option>
+                                <option value=3>MALE : MARRIED </option>
                                 <option value=4>FEMALE : SINGLE</option>
                             </select>
                         </div>
@@ -182,7 +182,7 @@
                                 <option value="None">PROPERTY</option>
                                 <option value=1>UNKNOWN</option>
                                 <option value=2>CAR OR OTHER</option>
-                                <option value=3>BUILDING SOC. SAVINGS AGR./LIFE INSURANCE</option>
+                                <option value=3>BUILDING/AGRICU/LIFE INSURANCE</option>
                                 <option value=4>REAL ESTATE</option>
                             </select>
                         </div>
